[gd_scene load_steps=20 format=3 uid="uid://k8nbtwxisbbw"]

[ext_resource type="Script" path="res://entities/player/player_ship.gd" id="1_y4txy"]
[ext_resource type="PackedScene" uid="uid://dquv283uvwc4b" path="res://entities/player/test_particles.tscn" id="2_o610h"]
[ext_resource type="Shader" path="res://shader/player_ship.gdshader" id="2_tuwjd"]
[ext_resource type="Material" uid="uid://djmydboyxeyur" path="res://resources/thrust_shader_material.tres" id="4_2xj1e"]
[ext_resource type="Texture2D" uid="uid://bj32yg41s8648" path="res://data/light/point.webp" id="4_lvblp"]
[ext_resource type="Texture2D" uid="uid://7nknufbr1enf" path="res://icon_sq.svg" id="5_3jw70"]
[ext_resource type="Script" path="res://entities/player/player_shield.gd" id="5_q4knm"]
[ext_resource type="PackedScene" uid="uid://cwh3m5g0begbp" path="res://debug/debug_dot.tscn" id="6_867ks"]
[ext_resource type="Shader" path="res://shader/debug/debug_dot.gdshader" id="6_w7u3c"]
[ext_resource type="Shader" path="res://shader/sfx/laser_pointer.gdshader" id="7_bxuee"]
[ext_resource type="Shader" path="res://shader/shield_jelly.gdshader" id="8_rygt0"]
[ext_resource type="Texture2D" uid="uid://dwnafngxitm58" path="res://data/assets/shiptest.svg" id="11_u2if0"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_usad8"]
noise_type = 3
fractal_type = 0
fractal_lacunarity = 3.33

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ti5tl"]
seamless = true
noise = SubResource("FastNoiseLite_usad8")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o60ew"]
shader = ExtResource("8_rygt0")
shader_parameter/FUZZ = 0.007
shader_parameter/BLUE = Color(0.098, 0.47, 0.769, 1)
shader_parameter/RED = Color(1, 0.349, 0.369, 1)
shader_parameter/YELLOW = Color(1, 0.792, 0.227, 1)
shader_parameter/ORANGE = Color(1, 0.57, 0.298, 1)
shader_parameter/BRIGHT_ORANGE = Color(1, 0.937, 0.769, 1)
shader_parameter/YELLOW_WHITE = Color(0.333, 0.264, 0.075, 1)
shader_parameter/GREEN = Color(0.501, 0.788, 0.149, 1)
shader_parameter/PURPLE = Color(0.416, 0.298, 0.576, 1)
shader_parameter/PURPLE_BLACK = Color(0.0416, 0.0298, 0.0576, 1)
shader_parameter/divisions = 32.0
shader_parameter/strengths = PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)
shader_parameter/scroll1 = Vector2(0.05, 0.05)
shader_parameter/noise1 = SubResource("NoiseTexture2D_ti5tl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2h8jf"]
resource_local_to_scene = true
shader = ExtResource("6_w7u3c")
shader_parameter/FUZZ = 0.007
shader_parameter/BLUE = Color(0.098, 0.47, 0.769, 1)
shader_parameter/RED = Color(1, 0.349, 0.369, 1)
shader_parameter/YELLOW = Color(1, 0.792, 0.227, 1)
shader_parameter/ORANGE = Color(1, 0.57, 0.298, 1)
shader_parameter/BRIGHT_ORANGE = Color(1, 0.937, 0.769, 1)
shader_parameter/YELLOW_WHITE = Color(0.333, 0.264, 0.075, 1)
shader_parameter/GREEN = Color(0.501, 0.788, 0.149, 1)
shader_parameter/PURPLE = Color(0.416, 0.298, 0.576, 1)
shader_parameter/PURPLE_BLACK = Color(0.0416, 0.0298, 0.0576, 1)
shader_parameter/strength = 1.0
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rmlkv"]
shader = ExtResource("7_bxuee")
shader_parameter/FUZZ = 0.007
shader_parameter/BLUE = Color(0.098, 0.47, 0.769, 1)
shader_parameter/RED = Color(1, 0.349, 0.369, 1)
shader_parameter/YELLOW = Color(1, 0.792, 0.227, 1)
shader_parameter/ORANGE = Color(1, 0.57, 0.298, 1)
shader_parameter/BRIGHT_ORANGE = Color(1, 0.937, 0.769, 1)
shader_parameter/YELLOW_WHITE = Color(0.333, 0.264, 0.075, 1)
shader_parameter/GREEN = Color(0.501, 0.788, 0.149, 1)
shader_parameter/PURPLE = Color(0.416, 0.298, 0.576, 1)
shader_parameter/PURPLE_BLACK = Color(0.0416, 0.0298, 0.0576, 1)
shader_parameter/laser_height = 0.1
shader_parameter/laser_width = 0.8
shader_parameter/opacity = 0.2
shader_parameter/cold_glow_power = 10.0
shader_parameter/cold_glow_color = Color(0.0980392, 0.470588, 0.768627, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8gfpo"]
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 10.0
flatness = 0.5
initial_velocity_min = 1024.0
initial_velocity_max = 1024.0
angular_velocity_min = 360.0
angular_velocity_max = 360.0
gravity = Vector3(0, 0, 0)
linear_accel_min = -100.0
linear_accel_max = -100.0
radial_accel_min = 89.26
radial_accel_max = 89.26
scale_min = 10.0
scale_max = 10.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_is3rr"]
shader = ExtResource("2_tuwjd")
shader_parameter/FUZZ = 0.007
shader_parameter/BLUE = Color(0.098, 0.47, 0.769, 1)
shader_parameter/RED = Color(1, 0.349, 0.369, 1)
shader_parameter/YELLOW = Color(1, 0.792, 0.227, 1)
shader_parameter/ORANGE = Color(1, 0.57, 0.298, 1)
shader_parameter/BRIGHT_ORANGE = Color(1, 0.937, 0.769, 1)
shader_parameter/YELLOW_WHITE = Color(0.333, 0.264, 0.075, 1)
shader_parameter/GREEN = Color(0.501, 0.788, 0.149, 1)
shader_parameter/PURPLE = Color(0.416, 0.298, 0.576, 1)
shader_parameter/PURPLE_BLACK = Color(0.0416, 0.0298, 0.0576, 1)

[node name="PlayerShip" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_y4txy")
max_health = 5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2(0.95, 0.95)
polygon = PackedVector2Array(0, -74, 62, 34, -62, 34)

[node name="Shield" type="Node2D" parent="."]
script = ExtResource("5_q4knm")
detection_ray_length = 200.0

[node name="JellyShieldSprite" type="Sprite2D" parent="Shield"]
material = SubResource("ShaderMaterial_o60ew")
scale = Vector2(3.08594, 3.08594)
texture = ExtResource("5_3jw70")

[node name="DebugDot" parent="Shield" instance=ExtResource("6_867ks")]
material = SubResource("ShaderMaterial_2h8jf")

[node name="Pivot" type="Node2D" parent="."]

[node name="LaserPointer" type="Sprite2D" parent="Pivot"]
material = SubResource("ShaderMaterial_rmlkv")
position = Vector2(0, -342)
rotation = -1.57079
scale = Vector2(6.58047, 0.587351)
texture = ExtResource("5_3jw70")

[node name="Thrusters" type="Node2D" parent="Pivot"]

[node name="RearLeftImpulseSprite" type="Sprite2D" parent="Pivot/Thrusters"]
material = ExtResource("4_2xj1e")
position = Vector2(-34, 48)
scale = Vector2(0.304144, 0.499803)
texture = ExtResource("5_3jw70")

[node name="RearRightImpulseSprite" type="Sprite2D" parent="Pivot/Thrusters"]
material = ExtResource("4_2xj1e")
position = Vector2(34, 48)
scale = Vector2(0.304144, 0.499803)
texture = ExtResource("5_3jw70")

[node name="LeftImpulseSprite" type="Sprite2D" parent="Pivot/Thrusters"]
material = ExtResource("4_2xj1e")
position = Vector2(-37, 4.00001)
rotation = 1.57079
scale = Vector2(0.304144, 0.499803)
texture = ExtResource("5_3jw70")

[node name="RightImpulseSprite" type="Sprite2D" parent="Pivot/Thrusters"]
material = ExtResource("4_2xj1e")
position = Vector2(37, 4)
rotation = 4.71238
scale = Vector2(0.304144, 0.499803)
texture = ExtResource("5_3jw70")

[node name="ForwardImpulseSprite" type="Sprite2D" parent="Pivot/Thrusters"]
material = ExtResource("4_2xj1e")
position = Vector2(1.31127e-06, -65)
rotation = 3.14159
scale = Vector2(0.304144, 0.499803)
texture = ExtResource("5_3jw70")

[node name="MainThrusterSprite" type="Sprite2D" parent="Pivot/Thrusters"]
material = ExtResource("4_2xj1e")
position = Vector2(0, 90)
scale = Vector2(0.719647, 1.1826)
texture = ExtResource("5_3jw70")

[node name="ThrusterParticles" type="Node2D" parent="Pivot"]

[node name="MainThrusterParticles" parent="Pivot/ThrusterParticles" instance=ExtResource("2_o610h")]
light_mask = 2
position = Vector2(0, 59)
amount = 32
process_material = SubResource("ParticleProcessMaterial_8gfpo")
lifetime = 0.5
randomness = 0.1

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]
material = SubResource("ShaderMaterial_is3rr")
position = Vector2(0, -12)
texture = ExtResource("5_3jw70")

[node name="Sprite2D2" type="Sprite2D" parent="Pivot"]
position = Vector2(0, -19)
texture = ExtResource("11_u2if0")

[node name="ShadowCaster" type="PointLight2D" parent="Pivot"]
visible = false
range_layer_min = -1
shadow_enabled = true
texture = ExtResource("4_lvblp")
texture_scale = 10.0

[node name="NoShadow" type="PointLight2D" parent="Pivot"]
visible = false
position = Vector2(13, -40)
range_layer_min = -1
range_item_cull_mask = 2
texture = ExtResource("4_lvblp")
texture_scale = 10.0

[node name="MainCannonMarker" type="Marker2D" parent="Pivot"]
position = Vector2(0, -76)
